tests/ui/discord-frontend/entity_macro/invalid_entity.stderr
error: unknown entity name
  --> tests/ui/discord-frontend/entity_macro/invalid_entity.rs:40:25
   |
LL |     relates = [multiple "InvalidEntity": via "id" as "guild_id"]
   |                         ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

